--- a/index.html
+++ b/index.html
@@ -57,5 +57,13 @@
      </div>
     </div>
   </div>
+  <div class="quote-section">
+    <div class="quote">
+      This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.
+    </div>
+    <div class="quote-tag">
+      -Thor, God of Thunder
+    </div>
+  </div>
 </body>
 </html>
