--- a/index.html
+++ b/index.html
@@ -59,11 +59,22 @@
   </div>
   <div class="quote-section">
     <div class="quote">
-      This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.
+      This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
     </div>
     <div class="quote-tag">
       -Thor, God of Thunder
     </div>
+  </div>
+  <div class="action-call">
+    <div class="action-left">
+     <div class="action-header">
+       Call to action! It's time!
+     </div>
+     <div class="action-text">
+       Sign up for our product by clicking that button right over there!
+     </div>
+    </div>
+    <button class="action-button">Sign up</button>
   </div>
 </body>
 </html>
